--- a/src/main/webapp/i18n/sr/home.json
+++ b/src/main/webapp/i18n/sr/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Dobrodošli, Java Hipsteru!",
+    "title": " Hitne ",
     "subtitle": "Ovo je Vaša početna stranica",
     "logged": {
       "message": "Prijavljeni ste kao korisnik \"{{username}}\"."
