--- a/src/main/webapp/i18n/sr/error.json
+++ b/src/main/webapp/i18n/sr/error.json
@@ -6,7 +6,7 @@
       "403": "Nemate dozvolu za pristupanje ovoj stranici.",
       "404": "Stranica ne postoji.",
       "405": "The HTTP verb you used is not supported for this URL.",
-      "500": "Broj pokretanja mora biti jedinstven broj, molim vas da upisete neki drugi broj koji niste prije koristili"
+      "500": "Greska na serveru"
     },
     "concurrencyFailure": "Another user modified this data at the same time as you. Your changes were rejected.",
     "validation": "Validation error on the server."
