init 14 number of copy

--- a/src/main/webapp/i18n/sr/global.json
+++ b/src/main/webapp/i18n/sr/global.json
@@ -6,7 +6,7 @@
       "home": "Početna stranica",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
-        "main": "Entiteti",
+        "main": "Forme",
         "hitne": "Hitne",
         "ponudjaci": "Ponudjaci",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
