--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -100,6 +100,8 @@
       "edit": "Edit",
       "open": "Open",
       "save": "Save",
+      "add": "Add",
+      "print": "Print",
       "view": "View"
     },
     "detail": {
