--- a/src/main/webapp/i18n/sr/global.json
+++ b/src/main/webapp/i18n/sr/global.json
@@ -98,6 +98,9 @@
       "edit": "Izmeni",
       "open": "Otvori",
       "save": "Sačuvaj",
+      "print": "Stampaj",
+      "add": "Dodaj",
+
       "view": "Pregled"
     },
     "detail": {
